2010-01-07  Simon Hausmann  <simon.hausmann@nokia.com>

        Rubber-stamped by Kenneth Rohde Christiansen.

        [Qt] The library version number of the first package release is 4.7.0.

        * WebCore.pro:

2010-01-07  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Allow the application to override online/offline network status
        https://bugs.webkit.org/show_bug.cgi?id=32684

        Added API to NetworkStateNotifier for forcing network status.

        * platform/network/NetworkStateNotifier.h:
        * platform/network/qt/NetworkStateNotifierPrivate.h:
        * platform/network/qt/NetworkStateNotifierQt.cpp:
        (WebCore::NetworkStateNotifierPrivate::NetworkStateNotifierPrivate):
        (WebCore::NetworkStateNotifierPrivate::onlineStateChanged):
        (WebCore::NetworkStateNotifierPrivate::networkAccessPermissionChanged):
        (WebCore::NetworkStateNotifier::updateState):
        (WebCore::NetworkStateNotifier::NetworkStateNotifier):
        (WebCore::NetworkStateNotifier::setNetworkAccessAllowed):

2010-01-07  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Tor Arne Vestbø.

        [Qt] Fix linkage against Qt mobility API bearer management module

        Use the documented .pro file syntax to link against the correct
        library and (more importantly) get the include paths correct.

        * WebCore.pro:

2010-01-07  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Maciej Stachowiak.

        https://bugs.webkit.org/show_bug.cgi?id=33272
        'abort' event still fired as a progress event

        rdar://6710625
        Test media/video-error-abort.html doesn't work

        Test: http/tests/media/video-error-abort.html

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::scheduleEvent): Incorporate code from enqueueEvent.
        (WebCore::HTMLMediaElement::loadInternal): Fix 'abort' event firing logic missed