@@ -1,3 +1,14 @@
+2010-01-07  Dimitri Glazkov  <dglazkov@chromium.org>
+
+        No review, rolling out r52900.
+        http://trac.webkit.org/changeset/52900
+        https://bugs.webkit.org/show_bug.cgi?id=30055
+
+        Broke over 30 SVG pixel tests.
+
+        * rendering/RenderPath.cpp:
+        (WebCore::RenderPath::paint):
+
 2010-01-07  Simon Hausmann  <simon.hausmann@nokia.com>
 
         Rubber-stamped by Kenneth Rohde Christiansen.
